update deprecated newInstance method